# OldBearLang

./: CMakeLists.txt  Makefile  README.md  TODO  make_repl.sh
c_impl/: CMakeLists.txt  TODO
c_impl/include/: bearlang.h
c_impl/include/bearlang/: bearlang.h  bearlang_static_macros.h  bearlang_types.h
c_impl/src/: valtest
c_impl/src/bli/: main.c
c_impl/src/core/: bearlang.c  bl_builtins.c  bl_env.c  bl_eval.c  bl_hashmap_ops.c  bl_list_ops.c  bl_misc.c  bl_mk.c  bl_symbol_ops.c  bl_val_mm.c
examples/: helloworld.bear  repl.bear
include/bearlang/: bear_val.h  bearlang_static_macros.h  bearlang_types.h  builtin_bear.h  cave.h  cons_reader.h  parser.h  ppreader.h  sexp_splitter.h
src/bearlangc/: main.cpp
src/bearlangi/: main.cpp
src/bli/: main.c
src/core/: bl_builtins.c  bl_env.c
src/libbearlang/: bear_val.cpp  builtin_bear.cpp  cave.cpp  cons_reader.cpp  parser.cpp  ppreader.cpp  sexp_splitter.cpp
